# faladesk

./: .env.example  .env.test  .gitignore  AGENT.md  Dockerfile  Dockerfile.dev  Dockerfile.supabase  LICENSE  README.md  docker-compose.yml  init.sh  pyproject.toml
.github/workflows/: test.yml
backend/: .flake8  Dockerfile  manage.py
backend/apps/: __init__.py
backend/faladesk_backend/: __init__.py  asgi.py  celery.py  routing.py  urls.py  wsgi.py
docs/: 02-requisitos-assuncoes.md  03-modelo-dados.md  04-fluxos.md  05-plano-construcao.md  06-riscos-proximos-passos.md  README.md  development_guidelines.md
frontend/: .env.example  .eslintrc.json  .gitignore  angular.json  capacitor.config.ts  ionic.config.json  karma.conf.js  package.json  proxy.conf.json  tsconfig.app.json  tsconfig.base.json  tsconfig.json
k8s/: ai-router-deployment.yaml  ai-router-hpa.yaml  ai-router-service.yaml  configmap.yaml  edge-functions-deployment.yaml  edge-functions-service.yaml  email-adapter-deployment.yaml  email-adapter-service.yaml  frontend-deployment.yaml  frontend-service.yaml  ingress.yaml  namespace.yaml  redis-deployment.yaml  redis-service.yaml  secrets.yaml  whatsapp-adapter-deployment.yaml  whatsapp-adapter-service.yaml
requirements/: base.txt  dev.txt
server/: landing.html  server.js
supabase/: .env.example  schema.sql
web/: App.tsx  app.config.js  app.json  index.html  jest.config.js  jest.setup.ts  package.json  tsconfig.json  vite.config.ts  vitest.config.ts  vitest.setup.ts  webpack.config.js
whatsapp-adapter/: package.json  tsconfig.json
(+321 files in other folders)
